# GEMINIbase

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
docs/: cli.md  getting_started.md  index.md  testing.md
docs/api/: experiments.md  overview.md  plants.md  plots.md  populations.md  sites.md  traits.md
docs/database/: schema.md  scripts.md
docs/examples/: data_format_api.md  data_format_types_api.md  data_type_api.md  dataset_api.md  dataset_experiment_api.md  dataset_record_api.md  dataset_record_files_api.md  dataset_type_api.md  experiment_api.md  experiment_datasets_api.md  experiment_model_api.md  experiment_plots_api.md  experiment_populations_api.md  experiment_procedure_api.md  experiment_script_api.md  experiment_season_api.md  experiment_sensor_api.md  experiment_sensor_platforms_api.md  experiment_sites_api.md  experiment_traits_api.md  model_api.md  model_dataset_api.md  model_experiment_api.md  model_model_run_api.md  model_run_api.md  model_run_model_api.md  overview.md  plant_api.md  plant_plot_api.md  plant_population_api.md  plot_api.md  plot_experiment_api.md  plot_population_api.md  population_api.md  population_experiment_api.md  population_plot_api.md  procedure_api.md  procedure_dataset_api.md  procedure_experiment_api.md  procedure_procedure_run_api.md  (+30 more)
docs/pipeline/: overview.md
docs/rest_api/: experiments.md  overview.md  plants.md  plots.md  populations.md
gemini/: manager.py
gemini-ui/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
gemini-ui/e2e/: crud-workflow.spec.ts  genomic-import-workflow.spec.ts  gwas-workflow.spec.ts  trait-import-workflow.spec.ts
gemini-ui/scripts/: dev.sh
gemini-ui/src/: globals.css  main.tsx  routeTree.gen.ts
gemini/api/: _rename_cascade.py  accession.py  accession_alias.py  base.py  cultivar.py  data_format.py  data_type.py  dataset.py  dataset_record.py  dataset_type.py  enums.py  experiment.py  genotype.py  genotype_record.py  genotyping_study.py  germplasm_resolver.py  job.py  line.py  model.py  model_record.py  model_run.py  plant.py  plot.py  plot_geometry_version.py  population.py  procedure.py  procedure_record.py  procedure_run.py  reference_data.py  script.py  script_record.py  script_run.py  season.py  sensor.py  sensor_platform.py  sensor_record.py  sensor_type.py  site.py  trait.py  trait_level.py  (+3 more)
gemini/cli/: __main__.py  settings.py
gemini/config/: settings.py
gemini/db/: Dockerfile  config.py
scripts/: create_test_fixtures.py
tests/: conftest.py  docker-compose.test.yaml
(+425 files in other folders)
