[project]
name = "geminibase"
version = "0.9.6"
description = "GEMINIbase"
authors = [
    {name = "Pranav Ghate",email = "pranavghate94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.0,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlalchemy-mixins (>=2.0.5,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "litestar[standard] (>=2.15.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pendulum (>=3.0.0,<4.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "debugpy (>=1.8.13,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "boto3 (>=1.38.35,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "mkdocs-glightbox (>=0.4.0,<0.5.0)",
    "alembic (>=1.15.0,<2.0.0)",
    "bcrypt (>=4.1.0,<5.0.0)",
    "pyjwt (>=2.9.0,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]

[project.optional-dependencies]
test = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-xdist (>=3.5.0,<4.0.0)",
    "factory-boy (>=3.3.0,<4.0.0)",
    "faker (>=28.0.0,<30.0.0)",
    "Pillow (>=10.0.0,<12.0.0)",
]

[tool.poetry]
packages = [
    { include = "gemini"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
pytest-xdist = ">=3.5.0,<4.0.0"
factory-boy = ">=3.3.0,<4.0.0"
faker = ">=28.0.0,<30.0.0"
pillow = ">=10.0.0,<12.0.0"

[tool.poetry.scripts]
geminibase = "gemini.cli.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: Unit tests (no infrastructure required)",
    "integration: Integration tests (requires Docker)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["gemini"]
omit = [
    "gemini/examples/*",
    "gemini/pipeline/*",
    "gemini/db/init_sql/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"